--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Isso é um teste no github pages</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>RollerCoin</title>
 </head>
+
 <body>
-    <h1>Olá, Mundo!</h1>
+    <header>
+        <h1>Bem-vindo ao RollerCoin</h1>
+        <p>Sua experiência virtual de mineração começa aqui!</p>
+    </header>
+
+    <section id="main-content">
+        <h2>Sobre o RollerCoin</h2>
+        <p>O RollerCoin é um jogo online que simula a mineração de criptomoedas. Construa seu império de mineração e compita com outros jogadores para ganhar criptomoedas virtuais.</p>
+    </section>
+
+    <section id="features">
+        <h2>Recursos Principais</h2>
+        <ul>
+            <li>Mineração Virtual de Criptomoedas</li>
+            <li>Competição com Outros Jogadores</li>
+            <li>Atualize seu Equipamento de Mineração</li>
+        </ul>
+    </section>
+
+    <section id="get-started">
+        <h2>Comece Agora</h2>
+        <p>Junte-se à comunidade de mineração virtual hoje! Faça o cadastro e comece a construir seu império de mineração.</p>
+        <a href="https://www.rollercoin.com/" target="_blank" rel="noopener noreferrer">Cadastre-se Agora</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Site do RollerCoin</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
