--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     <section id="get-started">
         <h2>Comece Agora</h2>
         <p>Junte-se à comunidade de mineração virtual hoje! Faça o cadastro e comece a construir seu império de mineração.</p>
-        <a href="https://www.rollercoin.com/" target="_blank" rel="noopener noreferrer">Cadastre-se Agora</a>
+        <!--Start rollercoin.com code-->
+<a href="https://rollercoin.com/?r=kyluudij">
+   <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
+ </a> 
+ <!--End rollercoin.com code-->
+        <a href="https://rollercoin.com/?r=kyluudij" target="_blank" rel="noopener noreferrer">Cadastre-se Agora</a>
     </section>
 
     <footer>
