--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Linktree</title>
     <link rel="stylesheet" href="styles2.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458" crossorigin="anonymous"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-9271657152362458",
+            enable_page_level_ads: true
+        });
+    </script>
 </head>
 <body>
     <div class="container">
