Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
             <!-- Adicione mais links conforme necessário -->
         </div>
     </div>
+        <section id="get-started">
+        <h2>Comece Agora</h2>
+        <p>Junte-se à comunidade de mineração virtual hoje! Faça o cadastro e comece a construir seu império de mineração.</p>
+        <!--Start rollercoin.com code-->
+        <a href="https://rollercoin.com/?r=kyluudij">
+        <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
+        </a> 
+        <!--End rollercoin.com code-->
+    </section>
 </body>
 </html>
