--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Seu Nome</h1>
         </div>
         <div class="banner">
-            <img src="seu-banner.jpg" alt="Banner" class="banner-img">
+            <img src="banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="links">
             <a href="https://seulink1.com" target="_blank">Link 1</a>
