--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img src="sua-foto-de-perfil.jpg" alt="Foto de Perfil" class="profile-pic">
+            <img src="profile.png" alt="Foto de Perfil" class="profile-pic">
             <h1>Seu Nome</h1>
         </div>
         <div class="banner">
