--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="https://seulink3.com" target="_blank">Link 3</a>
             <!-- Adicione mais links conforme necessário -->
         </div>
-        <section id="get-started">
+        <div class="ref">
         <h2>Comece Agora</h2>
         <p>Junte-se à comunidade de mineração virtual hoje! Faça o cadastro e comece a construir seu império de mineração.</p>
         <!--Start rollercoin.com code-->
@@ -35,7 +35,7 @@
         <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
         </a> 
         <!--End rollercoin.com code-->
-        </section>
+        </div>
     </div>
 </body>
 </html>
