--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="links">
-            <a href="https://seulink1.com" target="_blank">Link 1</a>
+            <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
             <a href="https://seulink2.com" target="_blank">Link 2</a>
             <a href="https://seulink3.com" target="_blank">Link 3</a>
             <!-- Adicione mais links conforme necessário -->
