--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
             <a href="https://t.me/canalrkfox" target="_blank">Telegram</a>
             <a href="https://seulink3.com" target="_blank">Link 3</a>
+            <a href="https://seulink3.com" target="_blank">Link 3</a>
+            <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
+            <a href="https://nfq.thebeacon.gg/?referral=Rob_son7" target="_blank">The Beacon</a>
+            <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
+            <a href="https://referrals.linea.build/?refCode=8BZkdv0pCP" target="_blank">Linea: The Surge</a>
+            <a href="https://app.ether.fi/eeth?address=0xd8C39921d4539E0cECa02523F46C6AA128cAAAE7" target="_blank">ether.fi</a>
             <!-- Adicione mais links conforme necessário -->
         </div>
         <div class="ref">
