--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Linktree</title>
+    <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458" crossorigin="anonymous"></script>
     <script>
@@ -14,6 +14,7 @@
     </script>
 </head>
 <body>
+    
     <div class="container">
         <div class="profile">
             <img src="profile.png" alt="Foto de Perfil" class="profile-pic">
@@ -24,11 +25,16 @@
         <div class="links">
             <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
             <a href="https://t.me/canalrkfox" target="_blank">Telegram</a>
+            <a href="https://rollercoin.com/?r=kyluudij" target="_blank">RollerCoin</a>
+            <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
+            <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
+            <a href="https://fixedfloat.com/?ref=rkfox" target="_blank">Fixed Float</a>
             <a href="https://seulink3.com" target="_blank">Link 3</a>
-            <a href="https://seulink3.com" target="_blank">Link 3</a>
+            <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
             <a href="https://nfq.thebeacon.gg/?referral=Rob_son7" target="_blank">The Beacon</a>
             <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
+            <a href="https://amzn.to/3xu68tO" target="_blank">Afiliado Amazon</a>
             <a href="https://referrals.linea.build/?refCode=8BZkdv0pCP" target="_blank">Linea: The Surge</a>
             <a href="https://app.ether.fi/eeth?address=0xd8C39921d4539E0cECa02523F46C6AA128cAAAE7" target="_blank">ether.fi</a>
             <!-- Adicione mais links conforme necessário -->
@@ -42,6 +48,19 @@
         </a> 
         <!--End rollercoin.com code-->
         </div>
-    </div>
+        <div class="email">
+            <p>Para contatos profissionais, envie um email para: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p>
+        </div>
+        <!-- Local do Anúncio -->
+        <div class="ads">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="SEU-CÓDIGO-ADSENSE"
+                 data-ad-slot="1234567890"
+                 data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
 </body>
 </html>
