--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="ads">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="SEU-CÓDIGO-ADSENSE"
+                 data-ad-client="ca-pub-9271657152362458"
                  data-ad-slot="1234567890"
                  data-ad-format="auto"></ins>
             <script>
