--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
+    </div>
 </body>
 </html>
