--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458" crossorigin="anonymous"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-9271657152362458",
-            enable_page_level_ads: true
-        });
-    </script>
 </head>
 <body>    
     <div class="container">
@@ -22,10 +16,12 @@
             <img src="banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="links">
+            <H2>Canais</H2>
             <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
             <a href="https://t.me/canalrkfox" target="_blank">Telegram</a>
             <a href="https://rollercoin.com/?r=kyluudij" target="_blank">RollerCoin</a>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
+            <H2>Utilidades</H2>
             <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
             <a href="https://fixedfloat.com/?ref=rkfox" target="_blank">Fixed Float</a>
             <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
