--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>    
     <div class="container">
         <div class="profile">
-            <img src="profile.png" alt="Foto de Perfil" class="profile-pic">
+            <img src="/images/profile.png" alt="Foto de Perfil" class="profile-pic">
         </div>
         <div class="banner">
-            <img src="banner.png" alt="Banner" class="banner-img">
+            <img src="/images/banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="links">
             <H2>Canais</H2>
