--- a/ranking.html
+++ b/ranking.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Ranking de Usuários</h1>
     <div id="ranking"></div>
-    <script src="script.js"></script>
+    <script src="ranking.js"></script>
 </body>
 </html>
