--- a/index.html
+++ b/index.html
@@ -16,21 +16,34 @@
             <img src="/images/banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="links">
-            <H2>Canais</H2>
+            <H2>Midias Sociais</H2>
             <a href="https://www.youtube.com/@rkfox" target="_blank">YouTube</a>
             <a href="https://t.me/canalrkfox" target="_blank">Telegram</a>
+            <H2>Utilidades RollerCoin</H2>
             <a href="https://rollercoin.com/?r=kyluudij" target="_blank">RollerCoin</a>
+            <a href="https://wminerrc.github.io/" target="_blank">Lista de Recompensas</a>
+            <a href="https://wminerrc.github.io/calculator/index.html" target="_blank">Calculadora</a>
+            <a href="https://pierominaryganar.com/miner/cathouse-miner/" target="_blank">Custo de Fusões</a>
+            <a href="https://pierominaryganar.com/miner/" target="_blank">Pesquisar Miners</a>
+            <H2>Cripto</H2>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
-            <H2>Utilidades</H2>
             <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
             <a href="https://fixedfloat.com/?ref=rkfox" target="_blank">Fixed Float</a>
             <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
+            <H2>Jogos</H2>
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
             <a href="https://nfq.thebeacon.gg/?referral=Rob_son7" target="_blank">The Beacon</a>
             <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
+            <H2>Outros</H2>
             <a href="https://amzn.to/3xu68tO" target="_blank">Afiliado Amazon</a>
             <a href="https://referrals.linea.build/?refCode=8BZkdv0pCP" target="_blank">Linea: The Surge</a>
             <a href="https://app.ether.fi/eeth?address=0xd8C39921d4539E0cECa02523F46C6AA128cAAAE7" target="_blank">ether.fi</a>
+            <H2>Midias Recomendadas:</H2>
+            <a href="https://www.youtube.com/@WMiner" target="_blank">Canal WMiner</a>
+            <a href="https://www.youtube.com/@luc_1988" target="_blank">Canal Lucas Dias</a>
+            <a href="t.me/luc_dias1988" target="_blank">Telegram Lucas</a>
+            <a href="https://www.youtube.com/@MrLuckiBR" target="_blank">Canal Mr.Lucki</a>
+            <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Discord Mr.Lucki</a>
             <!-- Adicione mais links conforme necessário -->
         </div>
         <div class="ref">
@@ -43,19 +56,9 @@
             <!--End rollercoin.com code-->
         </div>
         <div class="email">
-            <p>Para contatos profissionais, envie um email para: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p>
+            <p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p>
         </div>
         <!-- Local do Anúncio -->
-        <div class="ads">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-9271657152362458"
-                 data-ad-slot="1234567890"
-                 data-ad-format="auto"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
     </div>
 </body>
 </html>
