--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <div class="email">
             <p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p>
         </div>
-        <!-- Local do Anúncio -->
+        <div id="sfccqs3uxhzbdxdtq6bb4bawcw4dxs7jlll"></div>
+        <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=cqs3uxhzbdxdtq6bb4bawcw4dxs7jlll&down=async" async></script><br><a href="https://www.freecounterstat.com">website counter widget</a><noscript><a href="https://www.freecounterstat.com" title="website counter widget"><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=cqs3uxhzbdxdtq6bb4bawcw4dxs7jlll" border="0" title="website counter widget" alt="website counter widget"></a></noscript>   
     </div>
 </body>
 </html>
