--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
             <!--End rollercoin.com code-->
         </div>
         <div class="email">
-            <p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p>
+            <p>Contato Profissional: <a href="mailto:canalrkfox@gmail.com">canalrkfox@gmail.com</a></p><br>
         </div>
-        <div>
-        <div id="sfccqs3uxhzbdxdtq6bb4bawcw4dxs7jlll"></div>
+        <div id="sfccqs3uxhzbdxdtq6bb4bawcw4dxs7jlll"><h3>Mineradores já passaram por aqui!</h3></div>
         <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=cqs3uxhzbdxdtq6bb4bawcw4dxs7jlll&down=async" async></script><br><noscript><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=cqs3uxhzbdxdtq6bb4bawcw4dxs7jlll" border="0" title="website counter widget" alt="website counter widget"></noscript>
-        <h3>Mineradores já passaram por aqui!</h3></div>
     </div>
 </body>
 </html>
