--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <H2>Midias Recomendadas:</H2>
             <a href="https://www.youtube.com/@WMiner" target="_blank">Canal WMiner</a>
             <a href="https://www.youtube.com/@luc_1988" target="_blank">Canal Lucas Dias</a>
-            <a href="t.me/luc_dias1988" target="_blank">Telegram Lucas</a>
+            <a href="t.me/luc_dias1988" target="_blank">Telegram Lucas Dias</a>
             <a href="https://www.youtube.com/@MrLuckiBR" target="_blank">Canal Mr.Lucki</a>
             <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Discord Mr.Lucki</a>
             <!-- Adicione mais links conforme necessário -->
