--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://amzn.to/3xu68tO" target="_blank">Afiliado Amazon</a>
             <a href="https://referrals.linea.build/?refCode=8BZkdv0pCP" target="_blank">Linea: The Surge</a>
             <a href="https://app.ether.fi/eeth?address=0xd8C39921d4539E0cECa02523F46C6AA128cAAAE7" target="_blank">ether.fi</a>
-            <H2>Midias Recomendadas:</H2>
+            <H2>Midias Parceiras</H2>
             <a href="https://www.youtube.com/@WMiner" target="_blank">Canal WMiner</a>
             <a href="https://www.youtube.com/@luc_1988" target="_blank">Canal Lucas Dias</a>
             <a href="t.me/luc_dias1988" target="_blank">Telegram Lucas Dias</a>
@@ -47,8 +47,6 @@
             <!-- Adicione mais links conforme necessário -->
         </div>
         <div class="ref">
-            <h2>Comece Agora</h2>
-            <p>Junte-se à comunidade de mineração virtual hoje! Faça o cadastro e comece a construir seu império de mineração.</p>
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
                 <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
