--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
             <H2>Outros</H2>
             <a href="https://amzn.to/3xu68tO" target="_blank">Afiliado Amazon</a>
+            <a href="https://app.getgrass.io/register/?referralCode=YknDzi0c4o2YMwg" target="_blank">Grass</a>
             <a href="https://referrals.linea.build/?refCode=8BZkdv0pCP" target="_blank">Linea: The Surge</a>
             <a href="https://app.ether.fi/eeth?address=0xd8C39921d4539E0cECa02523F46C6AA128cAAAE7" target="_blank">ether.fi</a>
             <H2>Midias Parceiras</H2>
