--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <H2>Cripto</H2>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
             <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
-            <a href="https://fixedfloat.com/?ref=rkfox" target="_blank">Fixed Float</a>
+            <a href="https://ff.io/?ref=tbtuvujb" target="_blank">Fixed Float</a>
             <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
             <H2>Jogos</H2>
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
