--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a href="t.me/luc_dias1988" target="_blank">Telegram Lucas Dias</a>
             <a href="https://www.youtube.com/@MrLuckiBR" target="_blank">Canal Mr.Lucki</a>
             <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Discord Mr.Lucki</a>
+            <h2>Habilitando as RAIDs</h2>
             <!-- Adicione mais links conforme necessário -->
         </div>
         <div class="ref">
