--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <a href="https://www.youtube.com/@MrLuckiBR" target="_blank">Canal Mr.Lucki</a>
             <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Discord Mr.Lucki</a>
             <h2>Habilitando as RAIDs</h2>
-            <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Passo 1: </a>
-            <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Passo 2: </a>
-            <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Passo 3: </a>
+            <a href="" target="_blank">Passo 1: </a>
+            <a href="" target="_blank">Passo 2: </a>
+            <a href="" target="_blank">Passo 3: </a>
             <!-- Adicione mais links conforme necessário -->
         </div>
         <div class="ref">
