--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9271657152362458" crossorigin="anonymous"></script>
 </head>
 <body>    
     <div class="container">
@@ -28,7 +27,7 @@
             <H2>Cripto</H2>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
             <a href="https://sideshift.ai/a/RKFox" target="_blank">SideShift</a>
-            <a href="https://ff.io/?ref=tbtuvujb" target="_blank">Fixed Float</a>
+            <a href="https://ff.io/?ref=rkfox" target="_blank">Fixed Float</a>
             <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
             <H2>Jogos</H2>
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
