--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="monetag" content="b43cb19848ed426b012ee2fb0960e0c8">
 </head>
 <body>    
     <div class="container">
