--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RKFox - Linktree</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="monetag" content="b43cb19848ed426b012ee2fb0960e0c8">
+    <script src="https://alwingulla.com/88/tag.min.js" data-zone="74744" async data-cfasync="false"></script>
 </head>
 <body>    
     <div class="container">
