--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <a href="https://www.youtube.com/@MrLuckiBR" target="_blank">Canal Mr.Lucki</a>
             <a href="https://discord.gg/RC5Bd6Ux" target="_blank">Discord Mr.Lucki</a>
             <h2>Habilitando as RAIDs</h2>
-            <a href="" target="_blank">Passo 1: </a>
-            <a href="" target="_blank">Passo 2: </a>
-            <a href="" target="_blank">Passo 3: </a>
+            <a href="https://discord.com/" target="_blank">Passo 1: Ter um Discord</a>
+            <a href="https://discord.com/invite/EDyWFmN" target="_blank">Passo 2: Acessar Discord do RC</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6TwbTGZjSw-RsOi8xENyGPykY_34qukqMuNNOlqa2v32g1A/viewform" target="_blank">Passo 3: Responder o Formulário</a>
             <!-- Adicione mais links conforme necessário -->
         </div>
         <div class="ref">
