--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="https://discord.com/" target="_blank">Passo 1: Ter um Discord</a>
             <a href="https://discord.com/invite/EDyWFmN" target="_blank">Passo 2: Acessar Discord do RC</a>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6TwbTGZjSw-RsOi8xENyGPykY_34qukqMuNNOlqa2v32g1A/viewform" target="_blank">Passo 3: Responder o Formulário</a>
-            <h2>Habilitando as RAIDs</h2>
+            <h2>Precisa de uma arte?</h2>
             <a href="https://linktr.ee/GUERDEART" target="_blank">Portfólio e Contato GUERDE</a>
             <!-- Adicione mais links conforme necessário -->
         </div>
