--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="https://t.me/canalrkfox" target="_blank">Telegram</a>
             <H2>Utilidades RollerCoin</H2>
             <a href="https://rollercoin.com/?r=kyluudij" target="_blank">RollerCoin</a>
+            <a href="https://t.me/rollertap_bot?start=6174267365" target="_blank">RollerTAP</a>
             <a href="https://wminerrc.github.io/" target="_blank">Lista de Recompensas</a>
             <a href="https://wminerrc.github.io/calculator/index.html" target="_blank">Calculadora</a>
             <a href="https://pierominaryganar.com/miner/cathouse-miner/" target="_blank">Custo de Fusões</a>
