--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="https://nfq.thebeacon.gg/?referral=Rob_son7" target="_blank">The Beacon</a>
             <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
             <H2>Outros</H2>
-            <a href="https://amzn.to/3xu68tO" target="_blank">Afiliado Amazon</a>
+            <a href="https://amzn.to/3XZky0p" target="_blank">Afiliado Amazon</a>
             <a href="https://app.getgrass.io/register/?referralCode=YknDzi0c4o2YMwg" target="_blank">Grass</a>
             <a href="https://r.honeygain.me/RKA703DF22" target="_blank">HoneyGain</a>
             <a href="https://referrals.linea.build/?refCode=8BZkdv0pCP" target="_blank">Linea: The Surge</a>
