--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
             <a href="https://nfq.thebeacon.gg/?referral=Rob_son7" target="_blank">The Beacon</a>
             <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
+            <a href="t.me/pocketfi_bot/Mining?startapp=6174267365" target="_blank">PocketFi</a>
             <H2>Outros</H2>
             <a href="https://amzn.to/3XZky0p" target="_blank">Afiliado Amazon</a>
             <a href="https://app.getgrass.io/register/?referralCode=YknDzi0c4o2YMwg" target="_blank">Grass</a>
