--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a href="https://wminerrc.github.io/calculator/index.html" target="_blank">Calculadora</a>
             <a href="https://pierominaryganar.com/miner/cathouse-miner/" target="_blank">Custo de Fusões</a>
             <a href="https://pierominaryganar.com/miner/" target="_blank">Pesquisar Miners</a>
+            <a href="https://docs.google.com/spreadsheets/d/1GlUb5rsW0FEYxpWDWX5Y_L0lj2dkmDAhMWe5fp8grIU/edit?gid=1242869408#gid=1242869408" target="_blank">Planilha CheckList (Piero)</a>
             <a href="https://docs.google.com/spreadsheets/d/1O0uMQoeZuaanR8j0MDS9SdGcEAA02L6C/" target="_blank">Planilha RollerTap</a>            
             <H2>Cripto</H2>
             <a href="https://nexo.com/ref/o6frrzb0uc" target="_blank">NEXO (saque grátis de BTC)</a>
