--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a href="https://ff.io/?ref=rkfox" target="_blank">Fixed Float</a>
             <a href="https://accounts.binance.com/register?ref=362424028" target="_blank">Binance</a>
             <H2>Jogos</H2>
+            <a href="https://mysticgames.onelink.me/pSh7/2hce9ftz" target="_blank">Call Of The Voyd</a>
             <a href="https://piratenation.game/play?code=P-rare-grog-1237" target="_blank">Pirate Nation</a>
             <a href="https://nfq.thebeacon.gg/?referral=Rob_son7" target="_blank">The Beacon</a>
             <a href="https://t.me/hamster_Kombat_bot/start?startapp=kentId6174267365" target="_blank">Hamster Kombat</a>
