--- a/ranking.html
+++ b/ranking.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking de Usuários</title>
+    <title>Dados dos Usuários</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ranking de Usuários</h1>
-    <div id="ranking"></div>
-    <script src="ranking.js"></script>
+    <h1>Dados dos Usuários</h1>
+    <table id="user-table">
+        <thead>
+            <tr>
+                <th>ID do Usuário</th>
+                <th>Dados</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Dados serão preenchidos aqui -->
+        </tbody>
+    </table>
+
+    <script src="script.js"></script>
 </body>
 </html>
