--- a/ranking.html
+++ b/ranking.html
@@ -3,23 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dados dos Usuários</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Ranking de Usuários</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+ 
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+ 
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+ 
+        th {
+            background-color: #f2f2f2;
+        }
+ 
+        img {
+            width: 48px;
+            height: 48px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Dados dos Usuários</h1>
-    <table id="user-table">
+    <h1>Ranking de Poder dos Usuários</h1>
+    <table id="rankingTable">
         <thead>
             <tr>
+                <th>Avatar</th>
+                <th>Nome do Personagem</th>
                 <th>ID do Usuário</th>
-                <th>Dados</th>
+                <th>Jogos</th>
+                <th>Miners</th>
+                <th>Total (Poder)</th>
+                <th>Bônus</th>
+                <th>Racks</th>
+                <th>Temp</th>
+                <th>Bônus (%)</th>
             </tr>
         </thead>
         <tbody>
-            <!-- Dados serão preenchidos aqui -->
+            <!-- Os dados serão inseridos aqui -->
         </tbody>
     </table>
-
-    <script src="ranking.js"></script>
+ 
+    <script>
+        // Array de objetos com IDs de usuários e nomes de personagens
+        const users = [
+            { id: '612e990c8831cd06eada1b8a', name: 'Personagem 1' },
+            { id: 'outra_id', name: 'Personagem 2' },
+            { id: 'mais_um_id', name: 'Personagem 3' }
+        ];
+ 
+        // Função para converter o poder para a unidade apropriada
+        function convertPower(power) {
+            if (power >= 1e6) {
+                return (power / 1e6).toFixed(2) + ' EH';
+            } else if (power >= 1e3) {
+                return (power / 1e3).toFixed(2) + ' PH';
+            } else {
+                return power.toFixed(2) + ' TH';
+            }
+        }
+ 
+        // Função para buscar dados do usuário
+        async function fetchUserData(userId) {
+            const baseUrl = "https://rollercoin.com/api/profile/user-power-data/";
+            const url = `${baseUrl}${userId}`;
+            const encodedUrl = encodeURIComponent(url);
+ 
+            try {
+                const response = await fetch(`https://rollercoin.free.mockoapp.net/get?url=${encodedUrl}`);
+ 
+                if (!response.ok) {
+                    throw new Error('Erro na requisição: ' + response.statusText);
+                }
+ 
+                const responseData = await response.json();
+                const data = JSON.parse(responseData.contents).data; // Parseia a string JSON dos dados
+                return data;
+            } catch (error) {
+                console.error('Erro ao buscar dados do usuário:', error);
+                return null;
+            }
+        }
+ 
+        // Função para adicionar dados à tabela
+        function addDataToTable(user, userData) {
+            const tableBody = document.querySelector('#rankingTable tbody');
+            const row = document.createElement('tr');
+ 
+            const avatarUrl = `https://avatars.rollercoin.com/static/avatars/thumbnails/48/${user.id}.png?v=1652150400524`;
+ 
+            row.innerHTML = `
+                <td><img src="${avatarUrl}" alt="Avatar de ${user.name}"></td>
+                <td>${user.name}</td>
+                <td>${user.id}</td>
+                <td>${userData.games}</td>
+                <td>${userData.miners}</td>
+                <td>${convertPower(userData.total)}</td>
+                <td>${userData.bonus.toFixed(2)}</td>
+                <td>${userData.racks}</td>
+                <td>${userData.temp}</td>
+                <td>${userData.bonus_percent.toFixed(2)}</td>
+            `;
+ 
+            tableBody.appendChild(row);
+        }
+ 
+        // Função para buscar e exibir os dados de todos os usuários
+        async function fetchAndDisplayAllUsers() {
+            for (const user of users) {
+                const userData = await fetchUserData(user.id);
+                if (userData) {
+                    addDataToTable(user, userData);
+                }
+            }
+        }
+ 
+        // Inicia a busca e exibição dos dados ao carregar a página
+        window.onload = fetchAndDisplayAllUsers;
+    </script>
 </body>
 </html>
