--- a/ranking.html
+++ b/ranking.html
@@ -57,9 +57,9 @@
     <script>
         // Array de objetos com IDs de usuários e nomes de personagens
         const users = [
-            { id: '612e990c8831cd06eada1b8a', name: 'Personagem 1' },
-            { id: 'outra_id', name: 'Personagem 2' },
-            { id: 'mais_um_id', name: 'Personagem 3' }
+            { id: '61e852b4dc27dc001969efa3', name: 'RKFox' },
+            { id: '61e484ca5aa1be001868f065', name: 'HANTAROGAMER' },
+            { id: '65de9e82a1e9f41193e2f6cc', name: 'GUERDE' }
         ];
  
         // Função para converter o poder para a unidade apropriada
