--- a/ranking.html
+++ b/ranking.html
@@ -42,7 +42,7 @@
             </tbody>
         </table>
     </div>
-    <script src="script.js"></script>
+    <script src="ranking.js"></script>
 </div>
 </body>
 </html>
