--- a/ranking.html
+++ b/ranking.html
@@ -28,13 +28,15 @@
         <table id="rankingTable">
             <thead>
                 <tr>
+                    <th>Rank</th>
+                    <th></th>
                     <th>Avatar</th>
                     <th>Nome do Personagem</th>
                     <th>Miners</th>
                     <th>Bônus (%)</th>
                     <th>Bônus</th>
                     <th>Racks</th>
-                    <th>Total (Poder)</th>
+                    <th>Poder Total</th>
                     <th>Progresso</th>
                 </tr>
             </thead>
