--- a/ranking.html
+++ b/ranking.html
@@ -30,14 +30,14 @@
                 <tr>
                     <th>Rank</th>
                     <th></th>
-                    <th>Avatar</th>
-                    <th>Nome do Personagem</th>
+                    <th>Nick</th>
                     <th>Miners</th>
                     <th>Bônus (%)</th>
                     <th>Bônus</th>
                     <th>Racks</th>
                     <th>Poder Total</th>
                     <th>Progresso</th>
+                    <th>Link</th>
                 </tr>
             </thead>
             <tbody>
