--- a/ranking.html
+++ b/ranking.html
@@ -13,7 +13,7 @@
     <div class="ref1">
         <!--Start rollercoin.com code-->
         <a href="https://rollercoin.com/?r=kyluudij">
-            <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
+            <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png" alt="Banner Rollercoin"/>
         </a> 
         <!--End rollercoin.com code-->
     </div>    
