--- a/ranking.html
+++ b/ranking.html
@@ -23,7 +23,7 @@
         <img src="/images/banner.png" alt="Banner" class="banner-img">
     </div>
     <div class="ranking">
-        <h1>Ranking de Poder dos Usuários</h1>
+        <h1>Ranking da Comunidade<br>(Referência: 22/07/2024)</h1>
         <table id="rankingTable">
             <thead>
                 <tr>
