--- a/ranking.html
+++ b/ranking.html
@@ -23,7 +23,8 @@
         <img src="/images/banner.png" alt="Banner" class="banner-img">
     </div>
     <div class="ranking">
-        <h1>Ranking da Comunidade</h1><br><h3>(Referência: 22/07/2024)</h3>
+        <h1>Ranking da Comunidade</h1>
+        <h3>(Referência: 22/07/2024)</h3>
         <table id="rankingTable">
             <thead>
                 <tr>
