--- a/ranking.html
+++ b/ranking.html
@@ -10,7 +10,7 @@
 </head>
 <body>    
     <div class="container">
-        <div class="ref1">
+        <div class="ref">
             <!--Start rollercoin.com code-->
             <a href="https://rollercoin.com/?r=kyluudij">
                 <img src="https://static.rollercoin.com/static/img/ref/gen2/w320h50.png"/> 
