--- a/ranking.html
+++ b/ranking.html
@@ -25,7 +25,7 @@
         </div>
     <div class="ranking">
         <h1>Ranking da Comunidade</h1>
-        <h3>(Referência: 23/07/2024) - 26 Membros</h3>
+        <h3>26 Membros - Referência: 23/07/2024</h3>
         <table id="rankingTable">
             <thead>
                 <tr>
