--- a/ranking.html
+++ b/ranking.html
@@ -39,6 +39,7 @@
                     <th>Poder Total</th>
                     <th>Progresso</th>
                     <th>Link</th>
+                    <th>Farm</th>
                 </tr>
             </thead>
             <tbody>
