--- a/eficiencia.html
+++ b/eficiencia.html
@@ -23,8 +23,9 @@
             <img src="/images/banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="input-container">
-            <input type="text" id="linkInput" placeholder="Insira o link da sala">
-            <button id="searchButton">Pesquisar</button>
+            <h3>Link da Sala</h3>
+            <center></center><input type="text" id="linkInput" placeholder="Insira o link da sala">
+            <button id="searchButton">Pesquisar</button></center>
         </div>
         <div id="results">
             <p>Miners: <span id="miners"></span></p>
