--- a/eficiencia.html
+++ b/eficiencia.html
@@ -23,6 +23,7 @@
             <img src="/images/banner.png" alt="Banner" class="banner-img">
         </div>
         <div class="input-container">
+            <h1>Calculadora de Eficiência</h1>
             <h3>Link da Sala</h3>
             <center></center><input type="text" id="linkInput" placeholder="Insira o link da sala">
             <button id="searchButton">Pesquisar</button></center>
