--- a/eficiencia.html
+++ b/eficiencia.html
@@ -22,10 +22,11 @@
         <div class="banner">
             <img src="/images/banner.png" alt="Banner" class="banner-img">
         </div>
-        <div class="input-container">
+        <div class="calc">
             <h1>Calculadora de Eficiência</h1>
             <h3>Link da Sala</h3>
-            <center></center><input type="text" id="linkInput" placeholder="Insira o link da sala">
+        <div class="input-container">
+            <center><input type="text" id="linkInput" placeholder="Insira o link da sala">
             <button id="searchButton">Pesquisar</button></center>
         </div>
         <div id="results">
@@ -33,6 +34,7 @@
             <p>Bônus(%): <span id="bonusPercent"></span></p>
             <p>Bônus: <span id="bonus"></span></p>
             <p>Poder Total: <span id="totalPower"></span></p>
+        </div>
         </div>
     </div>
     <script src="efficiency.js"></script>
