--- a/eficiencia.html
+++ b/eficiencia.html
@@ -42,18 +42,18 @@
                         <th colspan="2">COMPRA/RECOMPENSA</th>
                     </tr>
                     <tr>
-                        <th>Poder</th>
+                        <th>Poder(PHs)</th>
                         <th>Bônus(%)</th>
-                        <th>Poder</th>
+                        <th>Poder(PHs)</th>
                         <th>Bônus(%)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" class="power-input" placeholder="Insira o poder (PHs)"></td>
-                        <td><input type="text" class="bonus-input" placeholder="Insira o bônus (%)"></td>
-                        <td><input type="text" class="power-input" placeholder="Insira o poder (PHs)"></td>
-                        <td><input type="text" class="bonus-input" placeholder="Insira o bônus (%)"></td>
+                        <td><input type="text" class="power-input" placeholder="PHs"></td>
+                        <td><input type="text" class="bonus-input" placeholder="%"></td>
+                        <td><input type="text" class="power-input" placeholder="PHs"></td>
+                        <td><input type="text" class="bonus-input" placeholder="%"></td>
                     </tr>
                 </tbody>
             </table>
