--- a/eficiencia.html
+++ b/eficiencia.html
@@ -30,10 +30,26 @@
                 <button id="searchButton">Pesquisar</button>
             </div>
             <div id="results">
-                <p>Miners: <span id="miners"></span></p>
-                <p>Bônus(%): <span id="bonusPercent"></span></p>
-                <p>Bônus: <span id="bonus"></span></p>
-                <p>Poder Total: <span id="totalPower"></span></p>
+                <table>
+                <tbody>
+                    <tr>
+                        <td>Miners:</td>
+                        <td><span id="miners"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Bônus(%):</td>
+                        <td><span id="bonusPercent"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Bônus:</td>
+                        <td><span id="bonus"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Poder Total:</td>
+                        <td><span id="totalPower"></span></td>
+                    </tr>                    
+                </tbody>
+            </table>
             </div>
             <table>
                 <thead>
