--- a/eficiencia.html
+++ b/eficiencia.html
@@ -73,6 +73,9 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="calculate-button-container">
+                <button id="calculateButton">Calcular</button>
+            </div>
         </div>
     </div>
     <script src="efficiency.js"></script>
