--- a/eficiencia.html
+++ b/eficiencia.html
@@ -58,9 +58,9 @@
                         <th colspan="2">COMPRA/RECOMPENSA</th>
                     </tr>
                     <tr>
-                        <th>Poder(PHs)</th>
+                        <th>Poder(THs)</th>
                         <th>Bônus(%)</th>
-                        <th>Poder(PHs)</th>
+                        <th>Poder(THs)</th>
                         <th>Bônus(%)</th>
                     </tr>
                 </thead>
